fix java8 in client